--- a/app/src/main/res/layout/fragment_clickable_span.xml
+++ b/app/src/main/res/layout/fragment_clickable_span.xml
@@ -29,6 +29,7 @@
         android:layout_marginTop="50dp"
         android:textColor="@color/black"/>
 
+
     <TextView
         android:id="@id/all_desc"
         android:layout_width="wrap_content"
@@ -47,5 +48,25 @@
         android:textSize="20sp"
         android:layout_marginTop="50dp"
         android:textColor="@color/black"/>
+
+    <me.grantland.widget.AutofitTextView
+        android:id="@+id/auto_fit"
+        android:gravity="center_vertical"
+        android:maxLines="5"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/normal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:textSize="14sp"
+        android:maxLines="5"
+        android:textColor="@color/black"
+        />
 
 </LinearLayout>
