--- a/app/src/main/res/layout/fragment_custom_cardview.xml
+++ b/app/src/main/res/layout/fragment_custom_cardview.xml
@@ -1,57 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="@color/white"
               android:orientation="vertical">
 
-
-    <android.support.v7.widget.CardView
-        android:id="@id/cardview"
+    <com.lpan.study.view.actionbar.MyActionbarView
+        android:id="@id/my_actionbar"
         android:layout_width="match_parent"
-        app:cardBackgroundColor="@color/gray"
-        app:cardCornerRadius="15dp"
-        android:layout_margin="10dp"
-        android:layout_height="300dp">
+        android:layout_height="wrap_content"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="20dp">
-
-            <com.lpan.study.view.CircleImageView
-                android:id="@id/circle_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="name:   liaopan"
-                android:textColor="@color/black"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="email:   liaopan1992@126.com"
-                android:textColor="@color/black"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="location:   Beijing,China"
-                android:textColor="@color/black"
-                android:textSize="18sp"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
