--- a/app/src/main/res/layout/fragment_flow_layout.xml
+++ b/app/src/main/res/layout/fragment_flow_layout.xml
@@ -4,4 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <com.lpan.study.view.flowlayout.TagFlowLayout
+        android:id="@+id/flow_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </com.lpan.study.view.flowlayout.TagFlowLayout>
+
+
 </LinearLayout>
