--- a/app/src/main/res/layout/tag_item_with_drawable.xml
+++ b/app/src/main/res/layout/tag_item_with_drawable.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent">
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/tag_item_bg"
+          android:drawablePadding="10dp"
+          android:layout_marginRight="20dp"
+          android:drawableRight="@drawable/edit_close"
+          android:paddingBottom="8dp"
+          android:paddingLeft="20dp"
+          android:paddingRight="20dp"
+          android:paddingTop="8dp"
+          android:text="标签">
 
 </TextView>
