--- a/app/src/main/res/layout/fragment_calculate_alpha.xml
+++ b/app/src/main/res/layout/fragment_calculate_alpha.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical">
 
     <EditText
+        android:layout_marginTop="300dp"
         android:id="@id/edit1"
         android:layout_width="match_parent"
         android:layout_height="60dp"
