--- a/app/src/main/res/layout/fragment_work_time.xml
+++ b/app/src/main/res/layout/fragment_work_time.xml
@@ -11,6 +11,29 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/edit1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            android:text="time"/>
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:text="search"/>
+
+    </LinearLayout>
+
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,8 +48,8 @@
             android:layout_height="match_parent"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
-            android:paddingBottom="20dp"
-            android:paddingRight="10dp">
+            android:paddingRight="10dp"
+            android:paddingBottom="20dp">
 
             <TextView
                 android:id="@+id/day_tv"
@@ -58,9 +81,9 @@
                 android:id="@+id/date_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="left|center_vertical"
                 android:text="date"
-                android:layout_marginTop="5dp"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -72,9 +95,9 @@
                 android:id="@+id/hours_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="left|center_vertical"
                 android:text="hours"
-                android:layout_marginTop="5dp"
 
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -87,9 +110,9 @@
                 android:id="@+id/rest_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="left|center_vertical"
                 android:text="rest"
-                android:layout_marginTop="5dp"
 
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -102,9 +125,9 @@
                 android:id="@+id/early_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="left|center_vertical"
                 android:text="early"
-                android:layout_marginTop="5dp"
 
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -117,11 +140,11 @@
                 android:id="@+id/last_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="left|center_vertical"
                 android:text="last"
                 android:textColor="@color/black"
                 android:textSize="12sp"
-                android:layout_marginTop="5dp"
 
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
